// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Checkbox ui with placeholder: Component: Checkbox => ui => with placeholder 1`] = `
<FormGroup
  check={true}
  className=""
  tag="div"
>
  <Label
    check={true}
    for="agree"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
        "xxl",
      ]
    }
  >
    <Input
      checked={true}
      id="agree"
      innerRef={[Function]}
      onChange={[Function]}
      type="checkbox"
      valid={true}
    />
     
    Agree
  </Label>
  <p
    className="mb-0"
  >
    <em>
      Do you agree
    </em>
  </p>
  Some error
</FormGroup>
`;

exports[`Component: Checkbox ui without placeholder: Component: Checkbox => ui => without placeholder 1`] = `
<FormGroup
  check={true}
  className=""
  tag="div"
>
  <Label
    check={true}
    for="agree"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
        "xxl",
      ]
    }
  >
    <Input
      checked={false}
      id="agree"
      innerRef={[Function]}
      invalid={true}
      onChange={[Function]}
      type="checkbox"
      valid={false}
    />
     
    Agree
  </Label>
  Some error
</FormGroup>
`;
